# taesc-units

./: .gitignore  Cargo.toml  README.md  extract.py  index.css  index.html  index.scss  ta_file_decoder.py  test.py
data/: units.json  weapons.json
data_parsing/: ARMASPID.bos  cob_interpreter.py  env.py  extract.py  hpiextract  mirrors.py  new_extract.py  ta_file_decoder.py  test.py
src/: app.rs  main.rs  types.rs  unit.rs  units.rs
