[package]
name = "taesc-units"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18.0"
gloo-net = "0.5.0"
serde = { version = "1.0",  features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
log = "0.4.6"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["Document", "Window", "HtmlSelectElement", "ScrollToOptions", "ScrollBehavior"] }
js-sys = "0.3.69"